--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "img-loader": "^2.0.0",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.5.4"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.4",
+    "webpack-manifest-plugin": "^1.3.1"
   },
   "dependencies": {
     "jquery": "^3.2.1"
